src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__unclosed_body_error_message.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordEndProgram but found ''
  ┌─ <internal>:5:5
  │
5 │     
  │     ^ Unexpected token: expected KeywordEndProgram but found ''
